cabal-version:      >= 1.6
build-type:         Simple
name:               neil
version:            0.0
license:            BSD3
license-file:       LICENSE
category:           Development
author:             Neil Mitchell <ndmitchell@gmail.com>
maintainer:         Neil Mitchell <ndmitchell@gmail.com>
copyright:          Neil Mitchell 2004-2010
synopsis:           General tools for Neil
description:
    General tools for Neil.
homepage:           http://community.haskell.org/~ndm/
stability:          None

executable neil
    hs-source-dirs:     src
    build-depends:      base == 4.*, filepath, containers, directory, process, old-time, cmdargs
    main-is:            Main.hs
    ghc-options:        -threaded

    other-modules:
        Arguments
        Cabal
        Darcs
        Util
