cabal-version:      1.18
build-type:         Simple
name:               neil
version:            0.12
license:            BSD3
license-file:       LICENSE
category:           Development
author:             Neil Mitchell <ndmitchell@gmail.com>
maintainer:         Neil Mitchell <ndmitchell@gmail.com>
copyright:          Neil Mitchell 2010-2022
synopsis:           General tools for Neil
description:
    General tools for Neil. Typically, I don't bother releasing these tools, and just leave
    them in the Git repo.
homepage:           http://ndmitchell.com/
bug-reports:        https://github.com/ndmitchell/neil/issues
tested-with:        GHC==9.2, GHC==9.0, GHC==8.10, GHC==8.8, GHC==8.6, GHC==8.4, GHC==8.2, GHC==8.0
extra-doc-files:
    CHANGES.txt
    README.md

source-repository head
    type:     git
    location: https://github.com/ndmitchell/neil.git

flag small
    default: True
    manual: True
    description: Minimise dependencies

executable neil
    default-language:   Haskell2010
    hs-source-dirs:     src
    build-depends:      base == 4.*, filepath, directory, process, extra >= 0.5,
                        containers, cmdargs
    if flag(small)
        cpp-options: -DSMALL
    else
        build-depends: vector, aeson, text, bytestring, unordered-containers, tagsoup, deepseq, time >= 1.5
        other-modules:
            CI
            Releases

    main-is:            Main.hs

    other-modules:
        Paper.LatexError
        Paper.Haskell.Latex.Parser
        Paper.Haskell.Haskell.Provides
        Paper.Haskell.Haskell.Tweak
        Paper.Haskell.Fragment
        Paper.Haskell.Check
        Paper.Util.String
        Paper.Util.CmdNumber
        Paper.Haskell2.Haskell
        Paper.Haskell2.Type
        Paper.Haskell2.Stage3
        Paper.Haskell2.Stage2
        Paper.Util.Error
        Paper.Haskell2.Stage1
        Paper.Todo
        Paper.Ref
        Paper.Ftp
        Paper.Sync
        Paper.Push
        Paper.Haskell2.All
        Paper.WordCount
        Paper.Talk
        Paper.Make
        Paper.Util.FileData
        Paper.Haskell
        Paper.Main
        Arguments
        Binary
        Cabal
        Git
